add default tag,prepare repo for testing

--- a/packages/esm-sms-app/src/providers/providers-overview/providers-overview.scss
+++ b/packages/esm-sms-app/src/providers/providers-overview/providers-overview.scss
@@ -26,6 +26,12 @@
   margin-bottom: 0.5rem;
 }
 
+.tag {
+  :global(.cds--tag) {
+    min-height: unset;
+  }
+}
+
 .tableContainer {
   padding: 0;
 
