--- a/packages/esm-sms-app/src/providers/add-config-form/provider-config-form.scss
+++ b/packages/esm-sms-app/src/providers/add-config-form/provider-config-form.scss
@@ -1,10 +1,11 @@
 @use '@carbon/colors';
 @use '@carbon/layout';
 @use '@carbon/type';
+@use '@carbon/styles/scss/spacing';
 
 .heading {
   @include type.type-style("heading-03");
-  margin-bottom: 0.5rem;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .columnLabel {
@@ -14,13 +15,13 @@
 
 .radioButtonGroup{
   :global(.cds--radio-button-group--vertical) {
-    gap: 1rem;
+    gap: spacing.$spacing-05;
   }
 
 }
 
 .dynamicRow {
-  padding-block: 1rem;
+  padding-block: spacing.$spacing-05;
 }
 
 .checkBox {
@@ -34,7 +35,7 @@
 }
 
 .button {
-  height: 4rem;
+  height: spacing.$spacing-10;
   display: flex;
   align-content: flex-start;
   align-items: baseline;
@@ -42,11 +43,11 @@
 }
 
 .spinner {
-  min-height: 1rem;
+  min-height: spacing.$spacing-05;
 }
 
 .tablet {
-  padding: 1.5rem 1rem;
+  padding: spacing.$spacing-06 spacing.$spacing-05;
   background-color: white;
 }
 
@@ -55,7 +56,7 @@
 }
 
 .formContainer {
-  margin: 2.5rem 1rem;
+  margin: spacing.$spacing-08 spacing.$spacing-05;
 }
 
 .form {
@@ -71,7 +72,7 @@
 }
 
 .row {
-  margin: 0.5rem 0 2.5rem;
+  margin: spacing.$spacing-03 0 spacing.$spacing-08;
 }
 
 .errorMessage {
@@ -100,7 +101,7 @@
   }
 
   .skeleton {
-    height: 2.5rem;
+    height: spacing.$spacing-08;
   }
 }
 
@@ -112,6 +113,6 @@
   .row {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: spacing.$spacing-05;
   }
 }
