--- a/packages/esm-sms-app/src/providers/providers-overview/providers-overview.scss
+++ b/packages/esm-sms-app/src/providers/providers-overview/providers-overview.scss
@@ -23,7 +23,7 @@
 .key {
   @include type.type-style('body-compact-01');
   color: $text-02;
-  margin-bottom: 0.5rem;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .tag {
@@ -81,14 +81,14 @@
 .content {
   @include type.type-style('heading-compact-02');
   color: $text-02;
-  margin-bottom: 0.5rem;
+  margin-bottom: spacing.$spacing-03;
 }
 
 .configInfo {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
+  gap: spacing.$spacing-05;
+  padding: spacing.$spacing-05;
 }
 
 .gridTitle {
