--- a/packages/esm-messages-app/src/messages/messages-template/messages-template-field.scss
+++ b/packages/esm-messages-app/src/messages/messages-template/messages-template-field.scss
@@ -1,6 +1,4 @@
-
 @use '@carbon/styles/scss/spacing';
 @use '@carbon/styles/scss/type';
 @use '@carbon/colors';
-@import '@openmrs/esm-styleguide/src/vars';
-
+@use '@openmrs/esm-styleguide/src/vars';
