--- a/packages/esm-messages-app/src/messages/messages-chart-dashboard.scss
+++ b/packages/esm-messages-app/src/messages/messages-chart-dashboard.scss
@@ -1,7 +1,7 @@
 @use '@carbon/colors';
 @use '@carbon/styles/scss/spacing';
 @use '@carbon/styles/scss/type';
-@import "~@openmrs/esm-styleguide/src/vars";
+@use '@openmrs/esm-styleguide/src/vars' as *;
 
 .widgetCard {
   border: 1px solid $ui-03;
